feat: add header

--- a/src/frontend/quasar-project/src/css/quasar.variables.scss
+++ b/src/frontend/quasar-project/src/css/quasar.variables.scss
@@ -12,15 +12,16 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
+$primary: #cdcdcd;
+$on_primary: #090909;
 
-$primary   : #cdcdcd;
-$secondary : #99ff99;
-$accent    : #5200a3;
+$secondary: #99ff99;
+$accent: #5200a3;
 
-$dark      : #1d1d1d;
-$dark-page : #333333;
+$dark: #1d1d1d;
+$dark-page: #333333;
 
-$positive  : #21BA45;
-$negative  : #ff0000;
-$info      : #0080ff;
-$warning   : #ff8000;
+$positive: #21ba45;
+$negative: #ff0000;
+$info: #0080ff;
+$warning: #ff8000;
