feat: add meu and title toolbar in header

--- a/src/frontend/quasar-project/src/css/quasar.variables.scss
+++ b/src/frontend/quasar-project/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #cdcdcd;
+$primary: rgba(245, 245, 245, 0.80);
 $on_primary: #090909;
 
 $secondary: #99ff99;
