--- a/src/frontend/quasar-project/src/css/quasar.variables.scss
+++ b/src/frontend/quasar-project/src/css/quasar.variables.scss
@@ -12,16 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: rgba(245, 245, 245, 0.80);
-$on_primary: #090909;
-
-$secondary: #99ff99;
-$accent: #5200a3;
+$primary: #1976d2;
+$secondary: #26a69a;
+$accent: #9c27b0;
 
 $dark: #1d1d1d;
-$dark-page: #333333;
+$dark-page: #121212;
 
 $positive: #21ba45;
-$negative: #ff0000;
-$info: #0080ff;
-$warning: #ff8000;
+$negative: #c10015;
+$info: #31ccec;
+$warning: #f2c037;
